force-app/main/default/objects/Reviewer_Expertise__c/Reviewer_Expertise__c.object-meta.xml
<CustomObject>
    <label>Reviewer Expertise</label>
    <nameField>
        <displayFormat>RE-{000}</displayFormat>
        <label>Reviewer Expertise</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer Expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>