force-app/main/default/objects/Reviewer_Expertise__c/fields/Committee_Master__c.field-meta.xml
<CustomField>
    <fullName>Committee_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee Master</label>
    <referenceTo>Committee_Master__c</referenceTo>
    <relationshipLabel>Reviewer Expertise</relationshipLabel>
    <relationshipName>Reviewer_Expertise</relationshipName>
    <type>Lookup</type>
</CustomField>