force-app/main/default/objects/Reviewer_Expertise__c/fields/Primary_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Primary_Expertise__c</fullName>
    <label>Primary Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>