force-app/main/default/objects/Reviewer_Expertise__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Reviewer Expertise</relationshipLabel>
    <relationshipName>Reviewer_Expertise</relationshipName>
    <type>Lookup</type>
</CustomField>