force-app/main/default/objects/Reviewer_Expertise__c/fields/Secondary_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Expertise__c</fullName>
    <label>Secondary Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>